@@ -51,6 +51,21 @@
 			$this->logic	= $logic;
 		}
 		
+		public function getLeft()
+		{
+			return $this->left;
+		}
+		
+		public function getRight()
+		{
+			return $this->right;
+		}
+		
+		public function getLogic()
+		{
+			return $this->logic;
+		}
+		
 		public function toDialectString(Dialect $dialect)
 		{
 			return
